fixed overlap of main and nav sections

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,10 @@ body {
   background-color: #fff ;
 }
 
+main {
+  margin-top: 7vh;
+}
+
 h2 {
   color: #1a7d6b;
   text-align: center;
